2007-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* frame.el (frame-initialize, make-frame):
	* faces.el (tty-set-up-initial-frame-faces):
	* env.el (setenv): Don't set display-environment-variable.

2007-09-21  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/bytecomp.el (byte-compile-warnings)
	(byte-compile-warnings-safe-p): Add `mapcar'.
	(byte-compile-normal-call): Add option to suppress mapcar warning.
	(top-level): Use mapc rather than mapcar in eval-when-compile.
	(byte-compile-warning-types): Add mapcar and make-local.

2007-09-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-getenv-from): Remove.  Use getenv-internal instead.
	(server-create-tty-frame): Don't set unused `tty' property.
	Set `display' instead of display-environment-variable.
	(server-create-window-system-frame): No display-environment-variable.

2007-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* rfn-eshadow.el (rfn-eshadow-setup-minibuffer-hook)
	(rfn-eshadow-update-overlay-hook): New defvars.
	(rfn-eshadow-setup-minibuffer, rfn-eshadow-update-overlay):
	Run the hooks.

	* net/tramp.el (tramp-rfn-eshadow-overlay): New defvar.
	(tramp-rfn-eshadow-setup-minibuffer)
	(tramp-rfn-eshadow-update-overlay): New defuns.  Hook into
	rfn-eshadow.el.

	* net/tramp-smb.el (tramp-smb-errors): Add error message for call
	timeout.

2007-09-21  Markus Triska  <markus.triska@gmx.at>

	* emacs-lisp/bytecomp.el (byte-compile-normal-call): Warn when
	`mapcar' is called for effect.

2007-09-21  Glenn Morris  <rgm@gnu.org>

	* obsolete/sun-fns.el (emacs-quit-menu): Remove emacstool-related code.
	* term/sun-mouse.el (suspend-emacstool): Remove.
	* term/sun.el: Remove emacstool-related code.

2007-09-21  Kevin Ryde  <user42@zip.com.au>

	* international/mule.el (sgml-html-meta-auto-coding-function):
	Bind `case-fold-search' to t.

2007-09-21  Glenn Morris  <rgm@gnu.org>

	* textmodes/tex-mode.el (tex-validate-region): Handle escaped parens.
	(tex-next-unmatched-eparen): New function.